singletons-base/tests/compile-and-dump/Singletons/T401b.golden

Singletons/T401b.hs:0:0: error:
    `singletons-th` does not support higher-rank `forall`s
In the type: (forall a_0 . a_0) -> T_1

  |
5 | $(singletons [d|
  |  ^^^^^^^^^^^^^^^...

Singletons/T401b.hs:0:0: error: Q monad failure
  |
5 | $(singletons [d|
  |  ^^^^^^^^^^^^^^^...
